Adaptation fixes. Wow disable on mobile

--- a/styles/ourskills.css
+++ b/styles/ourskills.css
@@ -106,7 +106,7 @@
     width var(--base-tr-dur) var(--base-tr-del) ease-in-out,
     box-shadow var(--base-tr-dur) ease-in-out;
 
-  width: calc(150% + var(--ourskills-icon-size) / 2);
+  width: calc(100% + var(--ourskills-icon-size) / 2);
   z-index: 3;
   margin-left: calc(0px - var(--ourskills-icon-size) / 2);
   -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
@@ -208,6 +208,13 @@
   }
 }
 
+
+@media (max-width: 1300px) {
+  .our_skills .skill_wrapper .skill:hover {
+    width: calc(150% + var(--ourskills-icon-size) / 2);
+  }
+}
+
 @media (max-width: 1025px) {
   .our_skills .skills .skill_wrapper:last-of-type .skill:hover {
     width: calc(150% + var(--ourskills-icon-size) * 2);
@@ -265,6 +272,7 @@
     left: 33%;
     right: 20%;
   }
+
 }
 
 @media (max-width: 600px) {
